--- a/app/src/main/res/layout/select.xml
+++ b/app/src/main/res/layout/select.xml
@@ -13,27 +13,51 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <RadioGroup
-
+            android:id="@+id/rdoGroup"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp">
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="랜덤 주제 선택"/>
+                android:text="자유 주제 선택"
+                android:checked="true"
+                android:id="@+id/rdoFree"/>
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="자유 주제 선택"/>
+                android:text="랜덤 주제 선택"
+                android:id="@+id/rdoRand"
+                android:checked="false"/>
         </RadioGroup>
-        <Button
-            android:layout_marginTop="50dp"
+        <LinearLayout
+            android:visibility="invisible"
             android:layout_width="wrap_content"
-            android:layout_height="63dp"
-            android:layout_gravity="center"
-            android:text="랜덤 그림 주제 생성:공룡"
-            android:backgroundTint="#77D54A"
-            android:textSize="20dp"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/linearRand"
+            android:orientation="vertical"
+            android:layout_gravity="center">
+            <Button
+                android:layout_marginTop="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="63dp"
+                android:layout_gravity="center"
+                android:text="랜덤 그림 주제 생성"
+                android:backgroundTint="#77D54A"
+                android:textSize="20dp"
+                android:id="@+id/btnRand"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="랜덤 주제: 공룡"
+                android:textSize="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:id="@+id/tvRandTopic"/>
+        </LinearLayout>
+
 
     </LinearLayout>
     <LinearLayout
@@ -46,28 +70,44 @@
         <Switch
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="제한시간:있음"
-            android:textSize="30dp"/>
+            android:text="제한시간: 없음"
+            android:textSize="30dp"
+            android:checked="false"
+            android:id="@+id/switchTime"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:id="@+id/linearTime"
+            android:visibility="invisible"
+            >
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_width="27dp"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:maxLength="1"
+                android:textSize="30dp"
+                android:id="@+id/etHour"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="시간"
-                android:textSize="30dp"/>
+                android:textSize="30dp"
+               />
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:maxLength="2"
+                android:textSize="30dp"
+                android:id="@+id/etMin"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="분"
-                android:textSize="30dp"/>
+                android:textSize="30dp"
+                />
         </LinearLayout>
 
     </LinearLayout>
@@ -78,5 +118,6 @@
         android:layout_gravity="center"
         android:backgroundTint="#77D54A"
         android:text="시작"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:id="@+id/btnGPSStart"/>
 </LinearLayout>
